694 - Use makefiles generated with CodeLite Done. CodeBlocks directories have been definitely removed. CodeLite projects have been adepted to include $(EXECUTION_PATH) macro in the compiler options and the pre/post build commands. Makefiles added for all projects.

--- a/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Tools/Tools.project
@@ -190,7 +190,7 @@
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="DebugLinux32SharedrtDynamic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit/testmodule_tools"/>
         <IncludePath Value="../../../../tests/unit"/>
@@ -218,13 +218,13 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild>
-        <Command Enabled="yes">mkdir -p ../../../../bin/GCC/$(ConfigurationName)</Command>
-        <Command Enabled="yes">cp "../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineCommon.so" "../../../../bin/GCC/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineCommon.so" "."</Command>
-        <Command Enabled="yes">cp "../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineTools.so" "../../../../bin/GCC/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineTools.so" "."</Command>
-        <Command Enabled="yes">cp "../../../../bin/TestConfig.txt" "../../../../bin/GCC/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../bin/NormalizationTest.txt" "../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">mkdir -p $(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineCommon.so" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineCommon.so" "$(EXECUTION_PATH)."</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineTools.so" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/GCC/$(ConfigurationName)/libQuimeraEngineTools.so" "$(EXECUTION_PATH)."</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
       </PreBuild>
       <PostBuild>
         <Command Enabled="yes">rm *.so</Command>
@@ -251,7 +251,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugLinux32SharedrtStatic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit"/>
         <IncludePath Value="../../../../../3rdparty/ICU/include"/>
@@ -277,9 +277,9 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild>
-        <Command Enabled="yes">mkdir -p ../../../../bin/GCC/$(ConfigurationName)</Command>
-        <Command Enabled="yes">cp "../../../../bin/TestConfig.txt" "../../../../bin/GCC/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../bin/NormalizationTest.txt" "../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">mkdir -p $(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/GCC/$(ConfigurationName)"</Command>
       </PreBuild>
       <PostBuild>
         <Command Enabled="yes"/>
@@ -306,7 +306,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugMac32SharedrtDynamic" CompilerType="clang( based on LLVM 3.4svn )" DebuggerType="LLDB Debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit/testmodule_tools"/>
         <IncludePath Value="../../../../tests/unit"/>
@@ -334,13 +334,13 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild>
-        <Command Enabled="yes">mkdir -p ../../../../bin/Clang/$(ConfigurationName)</Command>
-        <Command Enabled="yes">cp "../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineCommon.dylib" "../../../../bin/Clang/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineCommon.dylib" "."</Command>
-        <Command Enabled="yes">cp "../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineTools.dylib" "../../../../bin/Clang/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineTools.dylib" "."</Command>
-        <Command Enabled="yes">cp "../../../../bin/TestConfig.txt" "../../../../bin/Clang/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../bin/NormalizationTest.txt" "../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">mkdir -p $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineCommon.dylib" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineCommon.dylib" "$(EXECUTION_PATH)."</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineTools.dylib" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../../bin/Clang/$(ConfigurationName)/libQuimeraEngineTools.dylib" "$(EXECUTION_PATH)."</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
       </PreBuild>
       <PostBuild>
         <Command Enabled="yes">rm *.dylib</Command>
@@ -367,7 +367,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugMac32SharedrtStatic" CompilerType="clang( based on LLVM 3.4svn )" DebuggerType="LLDB Debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit"/>
         <IncludePath Value="../../../../../3rdparty/ICU/include"/>
@@ -393,9 +393,9 @@
         <StartupCommands/>
       </Debugger>
       <PreBuild>
-        <Command Enabled="yes">mkdir -p ../../../../bin/Clang/$(ConfigurationName)</Command>
-        <Command Enabled="yes">cp "../../../../bin/TestConfig.txt" "../../../../bin/Clang/$(ConfigurationName)"</Command>
-        <Command Enabled="yes">cp "../../../../bin/NormalizationTest.txt" "../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">mkdir -p $(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/TestConfig.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
+        <Command Enabled="yes">cp "$(EXECUTION_PATH)../../../../bin/NormalizationTest.txt" "$(EXECUTION_PATH)../../../../bin/Clang/$(ConfigurationName)"</Command>
         <Command Enabled="yes"/>
       </PreBuild>
       <PostBuild>
@@ -423,7 +423,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugWin32SharedrtDynamic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit/testmodule_tools"/>
         <IncludePath Value="../../../../tests/unit"/>
@@ -453,11 +453,11 @@
       </Debugger>
       <PreBuild/>
       <PostBuild>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\bin\TestConfig.txt" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\bin\NormalizationTest.txt" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineCommon.dll" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineTools.dll" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\bin\TestConfig.txt" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\bin\NormalizationTest.txt" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineCommon.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\bin\MinGW\$(ConfigurationName)\QuimeraEngineTools.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
@@ -481,7 +481,7 @@
       </Completion>
     </Configuration>
     <Configuration Name="DebugWin32SharedrtStatic" CompilerType="MinGW ( CodeLite-4.8.1 )" DebuggerType="GNU gdb debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem ../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
+      <Compiler Options="-g;-O0;-Wall -Wno-comment -m32 -isystem $(EXECUTION_PATH)../../../../../3rdparty/Boost/include" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" UseDifferentPCHFlags="no" PCHFlags="">
         <IncludePath Value="../../../../../headers"/>
         <IncludePath Value="../../../../tests/unit/testmodule_system"/>
         <IncludePath Value="../../../../tests/unit"/>
@@ -510,9 +510,9 @@
       </Debugger>
       <PreBuild/>
       <PostBuild>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\bin\TestConfig.txt" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\bin\NormalizationTest.txt" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
-        <Command Enabled="yes">cmd /c copy "..\..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll" "..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\bin\TestConfig.txt" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\bin\NormalizationTest.txt" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
+        <Command Enabled="yes">cmd /c copy "$(EXECUTION_PATH)..\..\..\..\..\3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\MinGW\*.dll" "$(EXECUTION_PATH)..\..\..\..\bin\MinGW\$(ConfigurationName)" /Y</Command>
       </PostBuild>
       <CustomBuild Enabled="no">
         <RebuildCommand/>
